--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ A cookie to save your choice will be stored either way, as this is information w
     <button class="python-button"><a href="http://pprobux.square.site">Free Robux</a></button>
     <button class="python-button"><a href="/PythonScratcher/txthuge/index.html">Huge Text</a></button>
     <br>
-    <button class="james-button"><a href="https://site.jamesmarke.repl.co/index.html">JamesMarke <small>(Crunchy New
-          Update!)</small></a></button>
+    <button class="james-button"><a href="/JamesMarke/index.htm">JamesMarke</a></button>
     <button class="james-button"><a href="/JamesMarke/gapiofficial/index.htm">GAPI</a></button>
     <button class="james-button"><a href="/JamesMarke/notes/index.html">Notes</a></button>
     <button class="james-button other-corner-button"><a href="/JamesMarke/compilation/index.htm"><i
