--- a/JamesMarke/index.htm
+++ b/JamesMarke/index.htm
@@ -1,1 +1,8 @@
-<h1>404 Not Found</h1>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <h1 style="font-family: Arial;">405 Not Found</h1>
+  </body>
+</html>
