New page layout lol

--- a/JamesMarke/index.htm
+++ b/JamesMarke/index.htm
@@ -1,8 +1,8 @@
 <html>
   <head>
-    
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 style="font-family: Arial;">405 Not Found</h1>
+      <logo>JM</logo>
   </body>
 </html>
