--- a/JamesMarke/index.htm
+++ b/JamesMarke/index.htm
@@ -3,6 +3,6 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-      <logo>JM</logo>
+      <logo>JM SUKZ</logo>
   </body>
 </html>
