--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -8,8 +8,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <span>In easy words: EU/UK law enforces us to show this alert: This site uses cookies. Click "OK" to continue, "Cancel" to stop. Disable cookies if you do not like them.\n\n\n\
-        In complicated words: This site stores information on your terminal equipment in order to provide the given service. Other websites embedded in this website might store information as well.\n\
+    <span>This site stores information on your terminal equipment in order to provide the given service. Other websites embedded in this website might store information as well.\n\
         Click "OK" to allow information to be stored. Click "Cancel" to stop *this* website from storing information. \
         A cookie to save your choice will be stored either way, as this is information which is strictly necessary in order to provide service which is explicitly requested to store by you.</span>
 </body>
