--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ if (getCookie('agreed') == '') {
     <div><a><i class="fa-solid fa-bars"></i></a></div>
     <div class=right><a><i class="fa-solid fa-user"></i></a>&nbsp;<a><i class="fa-solid fa-bullhorn"></i></a></div>
   </nav>
-<a href="https://www.hitwebcounter.com" target="_blank">
+<a href="/" target="_blank">
 <img src="https://hitwebcounter.com/counter/counter.php?page=8135153&style=0007&nbdigits=5&type=page&initCount=451" title="Free Counter" Alt="web counter"   border="0" /></a>
 
 
