--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ if (getCookie('agreed') == '') {
 </head>
 
 <body>
-  <div id="cookie-agreement"><span>By visiting this website, you are accepting the cookie policy.<br>For more information, click <a href="cookie-policy.html">here</a></span></div>
+  <div id="cookie-agreement"><span>By visiting this website, you are accepting the cookie policy.<br>For more information, click <a href="cookie-policy.html">here</a></span><button>Accept all</button><button>Decline all</button></div>
   <nav>
     <div><a><i class="fa-solid fa-bars"></i></a></div>
     <div class=right><a><i class="fa-solid fa-user"></i></a>&nbsp;<a><i class="fa-solid fa-bullhorn"></i></a></div>
