--- a/PythonScratcher/index.html
+++ b/PythonScratcher/index.html
@@ -8,6 +8,13 @@
             background-image: url("https://cdn.dribbble.com/users/187144/screenshots/1554808/wii.png");
          }
       </style>
+      <script src="https://NoozSBC.github.io/Duinotize/duinotize.js" defer></script>
+      <script>
+  Duinotize({
+    username: "PythonScratcher",
+    rigid: "PythonScratcher's Website"
+  });
+</script>
    </head>
 <title>PythonScratcher's Site</title>
    <script src="/PythonScratcher/underused.js"></script>
