--- a/JamesMarke/index.htm
+++ b/JamesMarke/index.htm
@@ -1,8 +1,14 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
-  <body>
-      <logo>JM SUKZ</logo>
-  </body>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="stylesheet.css"><link rel="stylesheet" href="universaldarktheme.css">
+</head>
+<body>
+  Hi
+</body>
 </html>
