--- a/JamesMarke/index.htm
+++ b/JamesMarke/index.htm
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="stylesheet.css"><link rel="stylesheet" href="universaldarktheme.css">
 </head>
 <body>
-  Hi
+  <div class="main-image-div"></div>
 </body>
 </html>
