--- a/JamesMarke/index.htm
+++ b/JamesMarke/index.htm
@@ -11,5 +11,14 @@
 </head>
 <body>
   <div class="main-image-div"></div>
+  <br>
+  <h1>James Marke</h1>
+  <br>
+  <small>@jammar</small>
+  <br>
+  <h3>Description:</h3>
+  <br>
+  <span>I have a but-tonne of projects - here are some:</span>
+  <br>
 </body>
 </html>
